# rules_csharp

./: .bazelrc  .gitignore  README.md  WORKSPACE
.gitpod/: gitpod-init.sh  gitpod.Dockerfile
docs/: BUILD
dotnet/private/: BUILD  common.bzl  launcher.sh.tpl  providers.bzl  repositories.bzl  runtime.BUILD  toolchains.bzl  windows_utils.bzl
dotnet/private/actions/: assembly.bzl  misc.bzl
dotnet/private/rules/: create_net_workspace.bzl
dotnet/private/rules/common/: attrs.bzl  binary.bzl
dotnet/private/rules/csharp/: binary.bzl  binary_private.bzl  library.bzl  nunit_test.bzl
dotnet/private/tools/apphost_shimmer/: BUILD.bazel
dotnet/private/tools/manifest_loader/: BazelManifest.cs
examples/: WORKSPACE
examples/strong_named/: BUILD
